# constellation-stream

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  reproduce.yml
artifacts/: BENCH.md  bench.json
docs/: architecture.md  assumptions.md
flink/: anomaly_job.py
grafana/dashboards/: heliosnet_stream.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: datasource.yml
src/constellation_stream/: __init__.py  bench.py  config.py  export.py  generator.py  lake.py  pipeline.py  processor.py  produce.py  schema.py  sink.py
tests/: test_exactly_once.py  test_generator.py  test_late_data.py  test_pipeline_bench.py  test_schema.py  test_windowing.py
